including calculations for wind/solar energy production

--- a/notebooks/cleaning_data.ipynb
+++ b/notebooks/cleaning_data.ipynb
@@ -53,7 +53,16 @@
     "### Data cleaning\n",
     "Objectives:\n",
     "- remove irrelevant/null columns\n",
-    "- keep only column variables associated with wind/solar energy production\n",
+    "- keep columns variables associated with wind power generation\n",
+    "    - wind speed\n",
+    "    - air density\n",
+    "        - air pressure\n",
+    "        - air temperature\n",
+    "        - relative humidity\n",
+    "- keep column variables associated with solar power generation\n",
+    "    - solar radiation\n",
+    "    - cloud cover fraction?\n",
+    "    - sunlight duration?\n",
     "- standardize column data with common variables (units, format)"
    ]
   },
