Data cleaning (BCH, CRD)
functions for dataset filtering and cleaning.

--- a/notebooks/analyzing_data.ipynb
+++ b/notebooks/analyzing_data.ipynb
@@ -17,9 +17,9 @@
     "\n",
     "Where:\n",
     "- E = Energy generated ($Watts$)\n",
-    "- r = solar panel efficiency ($%$)\n",
+    "- r = solar panel efficiency ($\\%$)\n",
     "- H = solar radiation ($W / m^{2}$)\n",
-    "- PR = performance ratio ($%$)\n"
+    "- PR = performance ratio ($\\%$)\n"
    ]
   },
   {
@@ -32,7 +32,7 @@
     "\n",
     "Where:\n",
     "- E = Energy generated ($Watts$)\n",
-    "- Cp = Coeffiecient of performance ($%$)\n",
+    "- Cp = Coeffiecient of performance ($\\%$)\n",
     "- ρ = air density ($kg / m^{3}$)\n",
     "- R = blade length ($m$)\n",
     "- V = wind speed ($m / s$)"
@@ -62,7 +62,9 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import os"
+    "import os\n",
+    "import math\n",
+    "import functions"
    ]
   },
   {
