--- a/notebooks/trials.ipynb
+++ b/notebooks/trials.ipynb
@@ -7,16 +7,8 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import os"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import math"
+    "import os\n",
+    "import functions"
    ]
   },
   {
