Data Cleaning (ENV_AQN, FLNRO_FERN)

--- a/notebooks/cleaning_data.ipynb
+++ b/notebooks/cleaning_data.ipynb
@@ -423,7 +423,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "column_names, column_nulls, duplicate_row_index = functions.start_cleaning(CRD_data)\n"
+    "column_names, column_nulls, duplicate_row_index = functions.start_cleaning(CRD_data)"
    ]
   },
   {
@@ -1484,6 +1484,388 @@
    "source": [
     "# save to csv\n",
     "EC_raw_data_wind_clean.to_csv(f'{path_2}/EC_raw_data_wind_clean.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### ENV_AQN Data Cleaning"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "d:\\School\\LHL\\capstone_project_data\\LHL_Capstone_Project\\notebooks\\functions.py:105: DtypeWarning: Columns (6,11) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  df_name = pd.read_csv(f'{path_2}/{data_name}.csv', index_col=0)\n"
+     ]
+    }
+   ],
+   "source": [
+    "ENV_AQN_data = functions.to_df('ENV_AQN_data.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "column_names, column_nulls, duplicate_row_index = functions.start_cleaning(ENV_AQN_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "column names: ['WDIR_VECT', ' TEMP_MEAN', ' WSPD_SCLR', ' PRECIP_TOTAL', ' avg_rel_hum_pst1hr', ' time', ' HUMIDITY', ' avg_air_temp_pst1hr', 'filename', ' BAR_PRESS', 'time', 'TEMP_MEAN', 'BAR_PRESS']\n",
+      "column nulls: WDIR_VECT                6568691\n",
+      " TEMP_MEAN               5436399\n",
+      " WSPD_SCLR               2296217\n",
+      " PRECIP_TOTAL           12783840\n",
+      " avg_rel_hum_pst1hr      8968906\n",
+      " time                     906219\n",
+      " HUMIDITY                8688631\n",
+      " avg_air_temp_pst1hr     7985418\n",
+      "filename                       0\n",
+      " BAR_PRESS              12978729\n",
+      "time                    12163662\n",
+      "TEMP_MEAN               13046707\n",
+      "BAR_PRESS               13054118\n",
+      "dtype: int64\n",
+      "duplicate rows: Int64Index([], dtype='int64')\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f'column names: {column_names}')\n",
+    "print(f'column nulls: {column_nulls}')\n",
+    "print(f'duplicate rows: {duplicate_row_index}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# only keep variables of interest\n",
+    "# no solar data available for this network\n",
+    "ENV_AQN_data_wind = ENV_AQN_data.loc[:,(' time', 'time', ' WSPD_SCLR', ' TEMP_MEAN', ' HUMIDITY', ' BAR_PRESS', 'filename')] "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       " time           906219\n",
+       "time          12163662\n",
+       " WSPD_SCLR     2296217\n",
+       " TEMP_MEAN     5436399\n",
+       " HUMIDITY      8688631\n",
+       " BAR_PRESS    12978729\n",
+       "filename             0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# count null values in wind data\n",
+    "ENV_AQN_data_wind.isna().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       " time           827218\n",
+       "time           9946446\n",
+       " WSPD_SCLR           0\n",
+       " TEMP_MEAN     3776367\n",
+       " HUMIDITY      7892770\n",
+       " BAR_PRESS    10696845\n",
+       "filename             0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# drop rows in wind data that do not have WindSpeed values\n",
+    "ENV_AQN_data_wind_clean = ENV_AQN_data_wind.dropna(subset=[' WSPD_SCLR'])\n",
+    "ENV_AQN_data_wind_clean.isna().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0     1.044\n",
+       "1     2.518\n",
+       "2     1.028\n",
+       "3     0.704\n",
+       "4     0.208\n",
+       "5     0.140\n",
+       "6     0.534\n",
+       "7     0.457\n",
+       "8     0.916\n",
+       "9     0.303\n",
+       "10    0.403\n",
+       "11    0.378\n",
+       "12    0.750\n",
+       "13    0.576\n",
+       "14    0.224\n",
+       "Name:  WSPD_SCLR, dtype: float64"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ENV_AQN_data_wind_clean[' WSPD_SCLR'].head(15)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "*Note: no units were provided for wind speed column. Based on range of values, assumed that units were already m/s.*\n",
+    "\n",
+    "*Only use next code block if data appears to be incorrect during analysis stage.*"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # convert windspeed values from km/h to m/s by dividing values by 3.6\n",
+    "# ENV_AQN_data_wind_clean.loc[:,' WSPD_SCLR'] = ENV_AQN_data_wind_clean.loc[:,' WSPD_SCLR'].div(3.6)\n",
+    "# ENV_AQN_data_wind_clean.head(15)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# save to csv\n",
+    "ENV_AQN_data_wind_clean.to_csv(f'{path_2}/ENV_AQN_data_wind_clean.csv')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### FLNRO_FERN Data Cleaning"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "FLNRO_FERN_data = functions.to_df('FLNRO_FERN_data.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "column_names, column_nulls, duplicate_row_index = functions.start_cleaning(FLNRO_FERN_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "column names: ['TempC', ' SolarRadiationWm', ' RH', ' WindSpeedms', ' Pressurembar', ' Rainmm', ' GustSpeedms', ' time', ' WindDirection', ' DewPtC', 'filename', ' Wetness', ' Tx', ' Tn', 'RHx', ' Tm', ' RHn', 'Tx']\n",
+      "column nulls: TempC                  78077\n",
+      " SolarRadiationWm     155467\n",
+      " RH                    76028\n",
+      " WindSpeedms          159515\n",
+      " Pressurembar         143098\n",
+      " Rainmm               163976\n",
+      " GustSpeedms          171360\n",
+      " time                      0\n",
+      " WindDirection        398990\n",
+      " DewPtC               187998\n",
+      "filename                   0\n",
+      " Wetness             1441326\n",
+      " Tx                  2318932\n",
+      " Tn                  2310515\n",
+      "RHx                  2331262\n",
+      " Tm                  2319798\n",
+      " RHn                 2331284\n",
+      "Tx                   2332311\n",
+      "dtype: int64\n",
+      "duplicate rows: Int64Index([], dtype='int64')\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f'column names: {column_names}')\n",
+    "print(f'column nulls: {column_nulls}')\n",
+    "print(f'duplicate rows: {duplicate_row_index}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# only keep variables of interest\n",
+    "FLNRO_FERN_data_solar = FLNRO_FERN_data.loc[:,(' time', ' SolarRadiationWm', 'filename')]\n",
+    "FLNRO_FERN_data_wind = FLNRO_FERN_data.loc[:,(' time', ' WindSpeedms', 'TempC', ' RH', ' Pressurembar', 'filename')]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       " time                0\n",
+       " SolarRadiationWm    0\n",
+       "filename             0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# drop rows in solar data that do not have SolarRadiation values\n",
+    "FLNRO_FERN_data_solar_clean = FLNRO_FERN_data_solar.dropna(subset=[' SolarRadiationWm'])\n",
+    "FLNRO_FERN_data_solar_clean.isna().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "FLNRO_FERN_data_solar_clean.to_csv(f'{path_2}/FLNRO_FERN_data_solar_clean.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       " time                 0\n",
+       " WindSpeedms     159515\n",
+       "TempC             78077\n",
+       " RH               76028\n",
+       " Pressurembar    143098\n",
+       "filename              0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# count null values in wind data\n",
+    "FLNRO_FERN_data_wind.isna().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       " time                0\n",
+       " WindSpeedms         0\n",
+       "TempC            53919\n",
+       " RH              51069\n",
+       " Pressurembar    53561\n",
+       "filename             0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# drop rows in wind data that do not have WindSpeed values\n",
+    "FLNRO_FERN_data_wind_clean = FLNRO_FERN_data_wind.dropna(subset=[' WindSpeedms'])\n",
+    "FLNRO_FERN_data_wind_clean.isna().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# save to csv\n",
+    "FLNRO_FERN_data_wind_clean.to_csv(f'{path_2}/FLNRO_FERN_data_wind_clean.csv')"
    ]
   }
  ],
