Data Cleaning (MoTIm)

--- a/notebooks/cleaning_data.ipynb
+++ b/notebooks/cleaning_data.ipynb
@@ -457,7 +457,8 @@
    "source": [
     "print(f'column names: {column_names}')\n",
     "print(f'column nulls: {column_nulls}')\n",
-    "print(f'duplicate rows: {duplicate_row_index}')"
+    "print(f'duplicate rows: {duplicate_row_index}')\n",
+    "CRD_data.shape"
    ]
   },
   {
@@ -2769,6 +2770,403 @@
    "source": [
     "# save to csv\n",
     "MoTIe_data_wind_clean.to_csv(f'{path_2}/MoTIe_data_wind_clean.csv')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### MoTIm Data Cleaning"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "MoTIm_data = functions.to_df('MoTIm_data.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "column_names, column_nulls, duplicate_row_index = functions.start_cleaning(MoTIm_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "column names: ['CURRENT_AIR_TEMPERATURE1', ' RELATIVE_HUMIDITY1', ' STORM_SNOW', ' STANDARD_SNOW', ' MINIMUM_AIR_TEMPERATURE', ' MAXIMUM_AIR_TEMPERATURE', ' time', ' PRECIPITATION_NEW', ' HEIGHT_OF_SNOW', 'filename', ' INTERVAL_SNOW', ' MEASURED_WIND_SPEED1', ' MEASURED_WIND_DIRECTION1']\n",
+      "column nulls: CURRENT_AIR_TEMPERATURE1       9742\n",
+      " RELATIVE_HUMIDITY1          409244\n",
+      " STORM_SNOW                  466916\n",
+      " STANDARD_SNOW               208950\n",
+      " MINIMUM_AIR_TEMPERATURE      32973\n",
+      " MAXIMUM_AIR_TEMPERATURE      33700\n",
+      " time                             0\n",
+      " PRECIPITATION_NEW           432471\n",
+      " HEIGHT_OF_SNOW              106445\n",
+      "filename                          0\n",
+      " INTERVAL_SNOW               685431\n",
+      " MEASURED_WIND_SPEED1        746336\n",
+      " MEASURED_WIND_DIRECTION1    763853\n",
+      "dtype: int64\n",
+      "duplicate rows: Int64Index([], dtype='int64')\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(769279, 13)"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(f'column names: {column_names}')\n",
+    "print(f'column nulls: {column_nulls}')\n",
+    "print(f'duplicate rows: {duplicate_row_index}')\n",
+    "MoTIm_data.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# only keep variables of interest\n",
+    "# no solar data available from this network\n",
+    "MoTIm_data_wind = MoTIm_data.loc[:,(' time', ' MEASURED_WIND_SPEED1', 'CURRENT_AIR_TEMPERATURE1', ' RELATIVE_HUMIDITY1', 'filename')] \n",
+    "    # note that no air pressure value is available"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       " time                            0\n",
+       " MEASURED_WIND_SPEED1       746336\n",
+       "CURRENT_AIR_TEMPERATURE1      9742\n",
+       " RELATIVE_HUMIDITY1         409244\n",
+       "filename                         0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# count null values in wind data\n",
+    "MoTIm_data_wind.isna().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       " time                         0\n",
+       " MEASURED_WIND_SPEED1         0\n",
+       "CURRENT_AIR_TEMPERATURE1    111\n",
+       " RELATIVE_HUMIDITY1         392\n",
+       "filename                      0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# drop rows in wind data that do not have WindSpeed values\n",
+    "MoTIm_data_wind_clean = MoTIm_data_wind.dropna(subset=[' MEASURED_WIND_SPEED1'])\n",
+    "MoTIm_data_wind_clean.isna().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5667     5.0\n",
+       "6865     5.0\n",
+       "6867     5.0\n",
+       "6872     1.0\n",
+       "6875     1.0\n",
+       "6881     5.0\n",
+       "6889     5.0\n",
+       "6893     5.0\n",
+       "7318     5.0\n",
+       "7326     2.0\n",
+       "7327     2.0\n",
+       "7329    12.0\n",
+       "7340    30.0\n",
+       "7343     2.0\n",
+       "7347     5.0\n",
+       "Name:  MEASURED_WIND_SPEED1, dtype: float64"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "MoTIm_data_wind_clean[' MEASURED_WIND_SPEED1'].head(15)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\maddy\\AppData\\Local\\Temp\\ipykernel_15012\\3504751675.py:2: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  MoTIm_data_wind_clean.loc[:,' MEASURED_WIND_SPEED1'] = MoTIm_data_wind_clean.loc[:,' MEASURED_WIND_SPEED1'].div(3.6)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>time</th>\n",
+       "      <th>MEASURED_WIND_SPEED1</th>\n",
+       "      <th>CURRENT_AIR_TEMPERATURE1</th>\n",
+       "      <th>RELATIVE_HUMIDITY1</th>\n",
+       "      <th>filename</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>5667</th>\n",
+       "      <td>1980-01-30 05:30:00</td>\n",
+       "      <td>1.388889</td>\n",
+       "      <td>11.5</td>\n",
+       "      <td>75.0</td>\n",
+       "      <td>11101.csv</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6865</th>\n",
+       "      <td>1986-03-09 16:00:00</td>\n",
+       "      <td>1.388889</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>63.0</td>\n",
+       "      <td>11101.csv</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6867</th>\n",
+       "      <td>1986-03-10 16:00:00</td>\n",
+       "      <td>1.388889</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>61.0</td>\n",
+       "      <td>11101.csv</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6872</th>\n",
+       "      <td>1986-03-13 06:00:00</td>\n",
+       "      <td>0.277778</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>75.0</td>\n",
+       "      <td>11101.csv</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6875</th>\n",
+       "      <td>1986-03-14 16:00:00</td>\n",
+       "      <td>0.277778</td>\n",
+       "      <td>8.5</td>\n",
+       "      <td>60.0</td>\n",
+       "      <td>11101.csv</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6881</th>\n",
+       "      <td>1986-03-17 16:45:00</td>\n",
+       "      <td>1.388889</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>61.0</td>\n",
+       "      <td>11101.csv</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6889</th>\n",
+       "      <td>1986-03-21 16:30:00</td>\n",
+       "      <td>1.388889</td>\n",
+       "      <td>10.5</td>\n",
+       "      <td>65.0</td>\n",
+       "      <td>11101.csv</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6893</th>\n",
+       "      <td>1986-03-23 18:00:00</td>\n",
+       "      <td>1.388889</td>\n",
+       "      <td>6.5</td>\n",
+       "      <td>94.0</td>\n",
+       "      <td>11101.csv</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7318</th>\n",
+       "      <td>1987-10-30 06:00:00</td>\n",
+       "      <td>1.388889</td>\n",
+       "      <td>11.5</td>\n",
+       "      <td>95.0</td>\n",
+       "      <td>11101.csv</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7326</th>\n",
+       "      <td>1987-11-03 17:00:00</td>\n",
+       "      <td>0.555556</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>98.0</td>\n",
+       "      <td>11101.csv</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7327</th>\n",
+       "      <td>1987-11-04 06:00:00</td>\n",
+       "      <td>0.555556</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>95.0</td>\n",
+       "      <td>11101.csv</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7329</th>\n",
+       "      <td>1987-11-05 06:00:00</td>\n",
+       "      <td>3.333333</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>95.0</td>\n",
+       "      <td>11101.csv</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7340</th>\n",
+       "      <td>1987-11-10 10:05:00</td>\n",
+       "      <td>8.333333</td>\n",
+       "      <td>13.5</td>\n",
+       "      <td>65.0</td>\n",
+       "      <td>11101.csv</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7343</th>\n",
+       "      <td>1987-11-11 17:00:00</td>\n",
+       "      <td>0.555556</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>80.0</td>\n",
+       "      <td>11101.csv</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7347</th>\n",
+       "      <td>1987-11-13 17:00:00</td>\n",
+       "      <td>1.388889</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>68.0</td>\n",
+       "      <td>11101.csv</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                      time   MEASURED_WIND_SPEED1  CURRENT_AIR_TEMPERATURE1  \\\n",
+       "5667   1980-01-30 05:30:00               1.388889                      11.5   \n",
+       "6865   1986-03-09 16:00:00               1.388889                      10.0   \n",
+       "6867   1986-03-10 16:00:00               1.388889                      11.0   \n",
+       "6872   1986-03-13 06:00:00               0.277778                       5.0   \n",
+       "6875   1986-03-14 16:00:00               0.277778                       8.5   \n",
+       "6881   1986-03-17 16:45:00               1.388889                       9.0   \n",
+       "6889   1986-03-21 16:30:00               1.388889                      10.5   \n",
+       "6893   1986-03-23 18:00:00               1.388889                       6.5   \n",
+       "7318   1987-10-30 06:00:00               1.388889                      11.5   \n",
+       "7326   1987-11-03 17:00:00               0.555556                       9.0   \n",
+       "7327   1987-11-04 06:00:00               0.555556                      10.0   \n",
+       "7329   1987-11-05 06:00:00               3.333333                       7.0   \n",
+       "7340   1987-11-10 10:05:00               8.333333                      13.5   \n",
+       "7343   1987-11-11 17:00:00               0.555556                      12.0   \n",
+       "7347   1987-11-13 17:00:00               1.388889                       9.0   \n",
+       "\n",
+       "       RELATIVE_HUMIDITY1   filename  \n",
+       "5667                 75.0  11101.csv  \n",
+       "6865                 63.0  11101.csv  \n",
+       "6867                 61.0  11101.csv  \n",
+       "6872                 75.0  11101.csv  \n",
+       "6875                 60.0  11101.csv  \n",
+       "6881                 61.0  11101.csv  \n",
+       "6889                 65.0  11101.csv  \n",
+       "6893                 94.0  11101.csv  \n",
+       "7318                 95.0  11101.csv  \n",
+       "7326                 98.0  11101.csv  \n",
+       "7327                 95.0  11101.csv  \n",
+       "7329                 95.0  11101.csv  \n",
+       "7340                 65.0  11101.csv  \n",
+       "7343                 80.0  11101.csv  \n",
+       "7347                 68.0  11101.csv  "
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# convert windspeed values from km/h to m/s by dividing values by 3.6\n",
+    "MoTIm_data_wind_clean.loc[:,' MEASURED_WIND_SPEED1'] = MoTIm_data_wind_clean.loc[:,' MEASURED_WIND_SPEED1'].div(3.6)\n",
+    "MoTIm_data_wind_clean.head(15)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# save to csv\n",
+    "MoTIm_data_wind_clean.to_csv(f'{path_2}/MoTIm_data_wind_clean.csv')"
    ]
   }
  ],
